--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Cosmin-Alexandru Diac
-logo: /assets/img/headshot_circle.JPG
+logo: /assets/img/headshot_circle.png
 theme: jekyll-theme-minimal
